# ytdl-rss

./: .flaskenv  README.md  main.py  pyproject.toml
ytdl_rss/: __init__.py  extensions.py  generator.py  views.py
ytdl_rss/templates/: base.html  index.html
